// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/MultiSelectField should correctly render 1`] = `
<div
  className="metadata-instance-editor-field-multi-select"
>
  <Label>
    <MultiSelectField
      isScrollable={true}
      onChange={[Function]}
      options={Array []}
      placeholder={
        <FormattedMessage
          defaultMessage="Select Values"
          id="boxui.metadataInstanceEditor.fieldMultiSelectValue"
        />
      }
      selectedValues={
        Array [
          "value",
        ]
      }
    />
  </Label>
</div>
`;

exports[`features/metadata-instance-editor/fields/MultiSelectField should correctly render with description 1`] = `
<div
  className="metadata-instance-editor-field-multi-select"
>
  <Label>
    <i
      className="metadata-instance-editor-field-multi-select-desc"
    >
      description
    </i>
    <MultiSelectField
      isScrollable={true}
      onChange={[Function]}
      options={Array []}
      placeholder={
        <FormattedMessage
          defaultMessage="Select Values"
          id="boxui.metadataInstanceEditor.fieldMultiSelectValue"
        />
      }
      selectedValues={
        Array [
          "value",
        ]
      }
    />
  </Label>
</div>
`;
